Fix small type and adjust spacing a bit on front page

--- a/docs/assets/css/main.css
+++ b/docs/assets/css/main.css
@@ -977,7 +977,7 @@ p.note {
   background: linear-gradient(45deg, rgba(246, 173, 75, .2), rgba(90, 62, 253, .2));
   border-radius: 1rem;
   padding: .5rem 1rem;
-  margin: .5rem 1rem;
+  margin: 2rem 1rem;
 
   padding-left: 3rem;
   text-indent: -2rem;
